Allow for easier unfiltering of layertree via button
See https://redmine-koala.bfs.de/issues/1443

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -137,7 +137,9 @@
             "data": {
                 "title": "Auswahl",
                 "tooltip": "LayerSet wechseln",
-                "tooltext": "Thema wechseln"
+                "tooltext": "Thema wechseln",
+                "btnTextResetThemeTreeFiltering": "Alle Layer",
+                "btnTooltipResetThemeTreeFiltering": "Hebt eine etwaige Filterung der verfügbaren Themen auf."
             }
         }
     },
