Gracefully handle timedout prints
See https://redmine-koala.bfs.de/issues/1368

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -85,7 +85,10 @@
             "unexpectedResponseTitle": "Unerwartete Antwort",
             "unexpectedResponse": "Der Druck lieferte eine unerwartete Antwort.",
             "printButtonPrefix": "Dokument",
-            "downloadButtonSuffix": "herunterladen"
+            "downloadButtonSuffix": "herunterladen",
+            "downloadOngoingMiddleText": " wird vorbereitet",
+            "warnPrintTimedOutTitle": "Druckfehler",
+            "warnPrintTimedOutText": "Die Druckerzeugung hat das erlaubte Zeitlimit überschritten."
         }
     },
     "Koala.view.grid.MetadataSearch": {
