Explicitly show that no records were found in the multi-search
This includes a nice TODO we can tackle during the upcoming workshop

See https://redmine-koala.bfs.de/issues/1421 especially #note-1.

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -94,14 +94,18 @@
     "Koala.view.grid.MetadataSearch": {
         "config": {
             "data": {
-                "metadataSearchTitle": "Daten und Dienste des BfS"
+                "metadataSearchTitle": "Daten und Dienste des BfS",
+                "searchInProgressText": "Suche läuft…",
+                "noRecordsFoundText": "Keine Datensätze gefunden"
             }
         }
     },
     "Koala.view.grid.SpatialSearch": {
         "config": {
             "data": {
-                "spatialSearchTitle": "Räumliche Suche"
+                "spatialSearchTitle": "Räumliche Suche",
+                "searchInProgressText": "Suche läuft…",
+                "noRecordsFoundText": "Keine Datensätze gefunden"
             }
         }
     },
