--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -94,14 +94,18 @@
     "Koala.view.grid.MetadataSearch": {
         "config": {
             "data": {
-                "metadataSearchTitle": "en:Daten und Dienste des BfS"
+                "metadataSearchTitle": "en:Daten und Dienste des BfS",
+                "searchInProgressText": "en:Suche läuft…",
+                "noRecordsFoundText": "en:Keine Datensätze gefunden"
             }
         }
     },
     "Koala.view.grid.SpatialSearch": {
         "config": {
             "data": {
-                "spatialSearchTitle": "en:Räumliche Suche"
+                "spatialSearchTitle": "en:Räumliche Suche",
+                "searchInProgressText": "en:Suche läuft…",
+                "noRecordsFoundText": "en:Keine Datensätze gefunden"
             }
         }
     },
