--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -94,14 +94,18 @@
     "Koala.view.grid.MetadataSearch": {
         "config": {
             "data": {
-                "metadataSearchTitle": "fr:Daten und Dienste des BfS"
+                "metadataSearchTitle": "fr:Daten und Dienste des BfS",
+                "searchInProgressText": "fr:Suche läuft…",
+                "noRecordsFoundText": "fr:Keine Datensätze gefunden"
             }
         }
     },
     "Koala.view.grid.SpatialSearch": {
         "config": {
             "data": {
-                "spatialSearchTitle": "fr:Räumliche Suche"
+                "spatialSearchTitle": "fr:Räumliche Suche",
+                "searchInProgressText": "fr:Suche läuft…",
+                "noRecordsFoundText": "fr:Keine Datensätze gefunden"
             }
         }
     },
