Allow to collapse / expand all legends in the tree
See https://github.com/terrestris/BasiGX/pull/86 and
https://redmine-koala.bfs.de/issues/1321

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -139,6 +139,18 @@
             }
         }
     },
+    "Koala.view.panel.RoutingLegendTree": {
+        "config": {
+            "data": {
+                "btnTxtCollapseAll": "",
+                "btnTooltipCollapseAll": "Alle Legenden einklappen.",
+                "btnTxtExpandAll": "",
+                "btnTooltipExpandAll": "Alle Legenden ausklappen.",
+                "btnTxtToggleAll": "",
+                "btnTooltipToggleAll": "Legendensichtbarkeit umkehren."
+            }
+        }
+    },
     "Koala.view.panel.ThemeTree": {
         "config": {
             "data": {
