--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -257,7 +257,14 @@
     "Koala.view.panel.MobileLegend": {
         "config": {
             "data": {
-                "title": "fr:Legende"
+                "title": "fr:Legende",
+                "maxLayersMsgBoxTitle": "fr:Hinweis",
+                "maxLayersMsgBoxMessage": "fr:Nur {0} parallele WMS Layer erlaubt. Bitte deaktivieren Sie mindestens einen Layer bevor Sie fortfahren können.",
+                "maxLayersMsgBoxBtnText": "fr:Ok",
+                "removeLayerMsgBoxTitle": "fr:Info",
+                "removeLayerMsgBoxMessage": "fr:Layer <b>{0}</b> aus Karte entfernen?",
+                "removeLayerMsgBoxYesBtnText": "fr:Ja",
+                "removeLayerMsgBoxNoBtnText": "fr:Nein"
             }
         }
     },
@@ -288,6 +295,20 @@
                 "utcLabel": "fr:UTC",
                 "localLabel": "fr:Lokal",
                 "languageSelectComboLabel": "fr:Sprache"
+            }
+        }
+    },
+    "Koala.view.form.LayerFilter": {
+        "config": {
+            "data": {
+                "startLabel": "fr:Start",
+                "endLabel": "fr:Ende",
+                "timestampLabel": "fr:Zeitpunkt",
+                "buttonText": "fr:Add",
+                "buttonTextNoFilter": "fr:Auswählen und in Karte übernehmen",
+                "valueFilter": "fr:Wertefilter",
+                "timeRangeFilter": "fr:Zeitraumfilter",
+                "pointInTimeFilter": "fr:Zeitpunktfilter"
             }
         }
     },
