Change order of buttons

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -692,7 +692,7 @@
                 "imprintButtonText": "Hilfe / Impressum",
                 "settingsButtonText": "Einstellungen",
                 "moreLayersButtonText": "Weitere Themen",
-                "addLayerButtonText": "Layer hinzufügen"
+                "addLayerButtonText": "Externen Layer hinzufügen"
             }
         }
     },
