--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -276,7 +276,7 @@
                 "imprintButtonText": "en:Hilfe / Impressum",
                 "settingsButtonText": "en:Einstellungen",
                 "moreLayersButtonText": "en:Weitere Themen",
-                "addLayerButtonText": "en:Layer hinzufügen"
+                "addLayerButtonText": "en:Externen Layer hinzufügen"
             }
         }
     },
