--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -276,7 +276,7 @@
                 "imprintButtonText": "fr:Hilfe / Impressum",
                 "settingsButtonText": "fr:Einstellungen",
                 "moreLayersButtonText": "fr:Weitere Themen",
-                "addLayerButtonText": "fr:Layer hinzufügen"
+                "addLayerButtonText": "fr:Externen Layer hinzufügen"
             }
         }
     },
